--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -62,7 +62,8 @@
 
             d3.json("/json/" + selectedState.state_name + "/" + selectedState.state_name + "-" + selectedYear + ".json", function(error, result){
                 electionData = result
-                var ac = d3.select('#ac')
+                var ac = d3.select('#ac');
+                var active = d3.select(null);
                 ac.selectAll('option').remove()
                 ac.selectAll('option').data(electionData).enter().append('option').attr('value', function(d){return d.ac_no}).text(function(d){return d.ac_no + " - " + d.ac_name})
                 $('#ac option[value="'+ 1  + '"]').prop('selected', true)
@@ -76,14 +77,72 @@
                     break
                     }
                 }
+                
+                function zoomed() {
+                    g.style("stroke-width", 1.5 / d3.event.scale + "px");
+                    g.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+                }
 
+                function reset() {
+                    active = d3.select(null);
+                    
+                    svg.transition()
+                        .duration(750)
+                        .call(zoom.translate([0, 0]).scale(1).event);
+                }
+
+                function handleClick(d) {
+                    if (active === d) return reset();
+                    active = d
+                    
+                    var bounds = path.bounds(d),
+                        dx = bounds[1][0] - bounds[0][0],
+                        dy = bounds[1][1] - bounds[0][1],
+                        x = (bounds[0][0] + bounds[1][0]) / 2,
+                        y = (bounds[0][1] + bounds[1][1]) / 2,
+                        scale = Math.max(1, Math.min(8, 0.85 / Math.max(dx / width, dy / height))),
+                        translate = [width / 2 - scale * x, height / 2 - scale * y];
+                        svg.transition()
+                            .duration(750)
+                            .call(zoom.translate(translate).scale(scale).event);
+
+                    for(var i = 0 ; i<= electionData.length ; i++){
+                        if(electionData[i].ac_no == Number(d.properties.ac_no)){
+                        $('#ac option[value="'+ d.properties.ac_no  + '"]').prop('selected', true)
+                        var candidatesDiv = d3.select(".candidates");
+                        var candidateDiv = candidatesDiv.selectAll(".candidate")
+                        candidateDiv.remove()
+                        candidateDiv = candidatesDiv.selectAll(".candidate")
+                        candidateDiv.data(sortCandidates(electionData[i].candidates)).enter().append("div").attr('class' , function(d,i){ return "candidate " +  d.Party.replaceAll(' ','_') })
+                                    .html(function(d){ return '<div class="partyName">' + d.Party + '</div><div class="candidateName">' + d.Candidate + '</div><div class="candidateDetails"><div class="votes"><div class="caption">Votes</div><div class="number">' + d['Total Votes'] + '</div></div><div class="votepercent"><div class="caption">Vote %</div><div class="number">' + d['Vote %'] + '</div></div></div>'})
+                        candidateDiv.attr('class' , function(d,i){ return "candidate " + d.Party.replaceAll(' ','_') } )        
+                        break
+                        }
+                    }
+                }
+
+                var zoom = d3.behavior.zoom()
+                    .translate([0, 0])
+                    .scale(1)
+                    .scaleExtent([1, 8])
+                    .on("zoom", zoomed);
 
                 var projection = d3.geo.mercator().center(selectedState.center).scale(selectedState.scale ).translate([width/2 , height/2]);
                 var svg = d3.select(".state-map").append("svg")
                     .attr("viewBox","0 0 " + width + " " +  height)
                 var path = d3.geo.path()
                     .projection(projection);
+
+                svg.append("rect")
+                    .attr("width", width)
+                    .attr("height", height)
+                    .on("click", reset);    
                 var g = svg.append("g");
+                svg
+                    .call(zoom) 
+                    .call(zoom.event);
+                
+                
                 d3.json("/json/" + selectedState.state_name + "/" + selectedState.state_name + ".json", function(error, topology) {
                     g.selectAll("path")
                         .data(topojson.object(topology, topology.objects[selectedState.state_name])
@@ -92,13 +151,12 @@
                         .append("path")
                         .attr("d", path)
                         .attr("stroke","black")
-                        .attr("stroke-width" , '0.7px')
-                        .style("fill", function(d) { return getWinnerPartyColor(d.properties.ac_no);} )
+                        .attr("stroke-width" , '0.3px')
+                        .style("fill", function(d) { return getWinnerPartyColor(d);} )
                         .on('mouseover', handleMouseOver)
                         .on('mouseout', handleMouseOut)
-                        .on('click', function(d) { handleClick(d.properties.ac_no)})
-                    drawLabels(topology, g,path)
-
+                        .on('click', function(d) { handleClick(d)})
+                        
                 });
             })
 
@@ -196,21 +254,7 @@
         function handleMouseOut(d, i) {
         }
 
-        function handleClick(d) {
-            for(var i = 0 ; i<= electionData.length ; i++){
-                if(electionData[i].ac_no == Number(d)){
-                $('#ac option[value="'+ d  + '"]').prop('selected', true)
-                var candidatesDiv = d3.select(".candidates");
-                var candidateDiv = candidatesDiv.selectAll(".candidate")
-                candidateDiv.remove()
-                candidateDiv = candidatesDiv.selectAll(".candidate")
-                candidateDiv.data(sortCandidates(electionData[i].candidates)).enter().append("div").attr('class' , function(d,i){ return "candidate " +  d.Party.replaceAll(' ','_') })
-                            .html(function(d){ return '<div class="partyName">' + d.Party + '</div><div class="candidateName">' + d.Candidate + '</div><div class="candidateDetails"><div class="votes"><div class="caption">Votes</div><div class="number">' + d['Total Votes'] + '</div></div><div class="votepercent"><div class="caption">Vote %</div><div class="number">' + d['Vote %'] + '</div></div></div>'})
-                candidateDiv.attr('class' , function(d,i){ return "candidate " + d.Party.replaceAll(' ','_') } )        
-                break
-                }
-            }
-        }
+        
         
         function sortCandidates(candidates){
             candidates.sort((a,b) => {return b['Total Votes'] - a['Total Votes']})
@@ -222,10 +266,10 @@
             return parties
         }
 
-        function getWinnerPartyColor(ac_no){
+        function getWinnerPartyColor(d){
             var candidates;
             for(var i = 0; i<electionData.length; i++){
-                if(electionData[i]['ac_no'] == ac_no){
+                if(electionData[i]['ac_no'] == d.properties.ac_no){
                     candidates = electionData[i]['candidates']
                     candidates.sort((a,b) => {return b['Total Votes'] - a['Total Votes']})
                     return color(candidates[0]['Party'])
